# helix

./: Cargo.toml
helix-core/src/: indent.rs  syntax.rs
helix-egui/: Cargo.toml
helix-egui/src/: app.rs  main.rs
helix-term/src/ui/: editor.rs
