[package]
name = "helix-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

helix-core = { version = "0.5", path = "../helix-core" }
helix-view = { version = "0.5", path = "../helix-view" }
helix-lsp = { version = "0.5", path = "../helix-lsp" }

# config
toml = "0.5"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
anyhow = "1.0.52"

egui = "0.16.1"
egui_winit_platform = "0.13.0"
winit = "0.26.0"
wgpu = "0.12.0"
egui_wgpu_backend = "0.16.0"
log = "0.4.14"
